2007-11-13	Till Straumann <strauman@slac.stanford.edu>

	* shared/src/cache.c: moved generic operations
	(flush/invalidate 1 data line, invalidate 1 inst. line)
	from #ifdef <cpu_flavor> to general section (all CPUs).

2007-11-13	Till Straumann <strauman@slac.stanford.edu>

	* shared/src/cache_.h: include <libcpu/cache.h> only
	#ifdef _OLD_EXCEPTIONS - no need for <libcpu/cache.h>
	otherwise.

2007-11-13	Till Straumann <strauman@slac.stanford.edu>
	
	* shared/include/byteorder.h: fixed wrong pointer-type
	of ld_le32() (uint16_t* -> uint32_t*).

2007-11-06	Till Straumann <strauman@slac.stanford.edu>

	* mpc5xx/irq/irq.c, mpc5xx/exceptions/raw_exception.c,
	new-exceptions/raw_exception.c: test for non-NULL-ness before calling
	'on'/'off' methods so that users don't have to provide
	no-ops if they don't want this feature.

2007-10-25	Thomas Doerfler <Thomas.Doerfler@embedded-brains.de>

	* mpc83xx/network/tsec.c:
	fixed typo in comment of attach function
	
2007-10-25	Thomas Doerfler <Thomas.Doerfler@embedded-brains.de>

	* Makefile.am, mpc83xx/spi/mpc83xx_spidrv.c,  
	* mpc83xx/spi/mpc83xx_spidrv.h, mpc83xx/include/mpc83xx.h:
	added spi driver
	
2007-10-25	Thomas Doerfler <Thomas.Doerfler@embedded-brains.de>

	* mpc83xx/i2c/mpc83xx_i2cdrv.c:  
	added IRQ support in I2C driver
	
2007-10-25	Thomas Doerfler <Thomas.Doerfler@embedded-brains.de>

	* mpc83xx/network/tsec.c:  
	added statistics counters to tsec
	
2007-09-12	Joel Sherrill <joel.sherrill@OARcorp.com>

	PR 1257/bsps
	* mpc5xx/exceptions/raw_exception.c, mpc5xx/irq/irq.c,
	mpc6xx/exceptions/raw_exception.c,
	mpc8260/exceptions/raw_exception.c,
	mpc8xx/exceptions/raw_exception.c, new-exceptions/raw_exception.c,
	ppc403/ictrl/ictrl.c, ppc403/irq/ictrl.c: Code outside of cpukit
	should use the public API for
	rtems_interrupt_disable/rtems_interrupt_enable. By bypassing the
	public API and directly accessing _CPU_ISR_Disable and
	_CPU_ISR_Enable, they were bypassing the compiler memory barrier