@@ -154,20 +154,6 @@ void _CPU_cache_unfreeze_instruction (
 #define isync \
   __asm__ volatile ("isync\n"::)
 
-void _CPU_cache_flush_1_data_line(
-	const void * _address )
-{
-  register const void *__address = _address;
-  asm volatile ( "dcbf 0,%0" :: "r" (__address) : "memory" );
-}
-
-void _CPU_cache_invalidate_1_data_line(
-	const void * _address )
-{
-  register const void *__address = _address;
-  asm volatile ( "dcbi 0,%0" :: "r"(__address) : "memory" );
-}
-
 void _CPU_cache_flush_entire_data ( void ) {}
 void _CPU_cache_invalidate_entire_data ( void ) {}
 void _CPU_cache_freeze_data ( void ) {}
@@ -187,13 +173,6 @@ void _CPU_cache_disable_data ( void )
   r1 = (0x4<<24);
   mtspr( 568, r1 );
   isync;
-}
-
-void _CPU_cache_invalidate_1_instruction_line(
-	const void * _address )
-{
-  register const void *__address = _address;
-  asm volatile ( "icbi 0,%0" :: "r" (__address) : "memory");
 }
 
 void _CPU_cache_invalidate_entire_instruction ( void ) {}
